deployments/homeassistant/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant
  name: home-assistant
spec:
  type: ClusterIP
  ports:
    - port: 8123
      targetPort: http
      protocol: TCP
      name: http
